<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/theme_dark">

    <!-- header -->
    <LinearLayout
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="55dp"
    android:orientation="vertical">
    <!-- step -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_centerHorizontal="true"
            style="@style/registration_header_steps"
            android:text="@string/registration_steps_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <!-- main -->
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_centerHorizontal="true"
            style="@style/registration_header_main"
            android:text="@string/registration_steps_4_header_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <!-- sub -->
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_centerHorizontal="true"
            style="@style/registration_header_sub"
            android:text="@string/registration_steps_4_header_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>
    <!-- center -->
    <LinearLayout
        android:id="@+id/center"
        android:layout_below="@id/header"
        android:layout_marginTop="66dp"
        android:layout_centerInParent="true"
        android:layout_width="338dp"
        android:layout_height="120dp"
        android:orientation="horizontal"
        >
        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="120dp"
            android:background="@drawable/rectangles_registration_steps_4_1">
            <LinearLayout
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_weight="1"
                    style="@style/registration_steps_4_inactive"
                    android:text="@string/registration_steps_4_day_1"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_weight="1"
                    style="@style/registration_steps_4_active"
                    android:text="@string/registration_steps_4_day_2"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_weight="1"
                    style="@style/registration_steps_4_inactive"
                    android:text="@string/registration_steps_4_day_3"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginHorizontal="20dp"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:background="@drawable/rectangles_registration_steps_4_2">
            <LinearLayout
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_weight="1"
                    style="@style/registration_steps_4_inactive"
                    android:text="@string/registration_steps_4_months_ru_1"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_weight="1"
                    style="@style/registration_steps_4_active"
                    android:text="@string/registration_steps_4_months_ru_2"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_weight="1"
                    style="@style/registration_steps_4_inactive"
                    android:text="@string/registration_steps_4_months_ru_3"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:background="@drawable/rectangles_registration_steps_4_1">
            <LinearLayout
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_weight="1"
                    style="@style/registration_steps_4_inactive"
                    android:text="@string/registration_steps_4_year_1"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_weight="1"
                    style="@style/registration_steps_4_active"
                    android:text="@string/registration_steps_4_year_2"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_weight="1"
                    style="@style/registration_steps_4_inactive"
                    android:text="@string/registration_steps_4_year_3"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <!-- Footer -->
    <LinearLayout
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/settings_main_big"
            android:text="@string/registration_steps_4_but"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangles_main_but"
            >
        </TextView>
    </LinearLayout>
</RelativeLayout>