<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/theme_dark"
    >

    <!-- header -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="37dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangles_settings_header"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                />
            <!-- android:background="@drawable/icon" -->
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="90dp"
            >
            <TextView
                style="@style/main_lost_like_lavista"
                android:text="@string/main_lost_like_lavista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangles_settings_header">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                />
            <!-- android:background="@drawable/icon" -->
        </RelativeLayout>
    </LinearLayout>
    <!-- center -->
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_below="@id/header"
        android:id="@+id/center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:background="@drawable/girl_back_jpg"
            />
        <TextView
            android:layout_marginTop="18dp"
            android:text="@string/main_lost_like_sub"
            android:gravity="center"
            android:layout_gravity="center"
            style="@style/main_lost_like_gen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginTop="70dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_gravity="center_horizontal"
                android:paddingHorizontal="20dp"
                android:layout_width="334dp"
                android:layout_height="100dp"
                android:background="@drawable/rectangles_lost_like_vip">
                >
                <LinearLayout
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true">
                    <TextView
                        style="@style/main_lost_like_small"
                        android:text="@string/main_lost_like_vip_dont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        style="@style/main_lost_like_big"
                        android:text="@string/main_lost_like_vip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        style="@style/main_lost_like_small"
                        android:text="@string/main_lost_like_vip_include"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/underline_default"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true">
                    <TextView
                        android:gravity="right"
                        style="@style/main_lost_like_small"
                        android:text="@string/main_lost_like_vip_total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:gravity="right"
                        style="@style/main_lost_like_big"
                        android:text="@string/main_lost_like_vip_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:gravity="right"
                        style="@style/main_lost_like_small"
                        android:text="@string/main_lost_like_vip_day"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="17dp"
                android:paddingHorizontal="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="334dp"
                android:layout_height="100dp"
                android:background="@drawable/rectangles_lost_like_arrows">
                >
                <LinearLayout
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true">
                    <TextView
                        style="@style/main_lost_like_small"
                        android:text="@string/main_lost_like_arrows_dont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <RelativeLayout
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="#FFF"
                        />
                    <TextView
                        style="@style/main_lost_like_small"
                        android:text="@string/main_lost_like_arrows_buy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/underline_default"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true">
                    <TextView
                        android:gravity="right"
                        style="@style/main_lost_like_small"
                        android:text="@string/main_lost_like_arrows_total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:gravity="right"
                        style="@style/main_lost_like_big"
                        android:text="@string/main_lost_like_arrows_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:gravity="right"
                        style="@style/main_lost_like_small"
                        android:text="@string/main_lost_like_arrows_by"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>